# loopengine

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.beads/: issues.jsonl
.github/workflows/: ci.yml
docs/: architecture.md  creating-corpora.md
experiments/: experiment_notes.md  ga_experiments.py  profile_simulation.py
experiments/results/: cashier_evolution.json  owner_evolution.json  sandwich_maker_evolution.json
frontend/: index.html  style.css
frontend/js/: agents.js  controls.js  corpus.js  discovery.js  ga.js  interaction.js  labels.js  links.js  main.js  particles.js  renderer.js
ortus/prompts/: ralph-prompt.md
prd/: PRD-dynamic-ai-agent-behaviors.md  intake.md
src/loopengine/: __init__.py  cli.py  logging_config.py
src/loopengine/api/: __init__.py  behaviors.py  domains.py  metrics.py
src/loopengine/behaviors/: __init__.py  agent_type_extractor.py  ai_behavior_engine.py  behavior_cache.py  behavior_history.py  behavior_pin_store.py  cache_key_generator.py  config.py  domain_parser.py  domain_store.py  fallback.py  interaction_extractor.py  latency_tracker.py  llm_client.py  prompt_builder.py  rate_limiter.py  resource_extractor.py  response_parser.py
src/loopengine/behaviors/providers/: __init__.py  claude.py  ollama.py  openai.py
src/loopengine/corpora/: __init__.py  sandwich_shop.py
src/loopengine/corpora/sandwich_shop/: __init__.py  __main__.py
src/loopengine/corpora/software_team/: __init__.py
src/loopengine/discovery/: __init__.py  discoverer.py  triggers.py
src/loopengine/engine/: __init__.py  ai_policy.py  fitness.py  flexibility.py  forces.py  ga.py  loop.py  simulation.py
src/loopengine/model/: __init__.py  agent.py  genome.py  label.py  link.py  particle.py  world.py
src/loopengine/projection/: __init__.py  projector.py
src/loopengine/server/: __init__.py  app.py
tests/: __init__.py  frontend_interaction_tests.md  test_agent_type_extractor.py  test_ai_behavior_engine.py  test_ai_policy.py  test_api_behaviors.py  test_api_domains.py  test_api_metrics.py  test_behavior_cache.py  test_behavior_export.py  test_behavior_pin_store.py  test_cache_key_generator.py  test_claude_client.py  test_concurrent_behaviors.py  test_constraints.py  test_discovery.py  test_domain_parser.py  test_domain_store.py  test_engine.py  test_error_handling.py  test_fallback.py  test_flexibility.py  test_forces.py  test_ga.py  test_interaction_extractor.py  test_latency_tracker.py  test_logging_config.py  test_model.py  test_ollama_client.py  test_openai_client.py  test_projection.py  test_prompt_builder.py  test_rate_limiter.py  test_resource_extractor.py  test_response_parser.py  test_sandwich_shop.py  test_server_app.py  test_software_team.py  test_triggers.py
tests/e2e/: __init__.py  conftest.py  test_simulation_flow.py  test_startup.py
