[project]
name = "loopengine"
version = "0.1.0"
description = "A simulation framework and visual explorer for modeling agents using a universal schema"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "LoopEngine Contributors" }
]
keywords = ["simulation", "agent-based", "visualization", "ooda-loop", "genetic-algorithm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "anthropic>=0.40.0",
    "msgpack>=1.1.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "openai>=2.16.0",
    "httpx>=0.28.1",
    "tenacity>=9.1.2",
]

[project.scripts]
loopengine = "loopengine.cli:main"

[project.urls]
Homepage = "https://github.com/loopengine/loopengine"
Documentation = "https://github.com/loopengine/loopengine#readme"
Repository = "https://github.com/loopengine/loopengine"
Issues = "https://github.com/loopengine/loopengine/issues"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loopengine"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "RUF",    # Ruff-specific rules
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
